<resources>
    <string name="app_name">FutbolExample</string>

    <string name="title_section_get">Get</string>
    <string name="title_section_post">Post</string>
    <string name="title_section_put">Put</string>
    <string name="title_section_delete">Delete</string>

    <string name="no_internet">No hay internet</string>
    <string name="no_error">No hay error</string>
    <string name="error_unexpected_response_exception">Unexpected filePath exception</string>
    <string name="error_json_syntax_exception">Json syntax exception</string>
    <string name="error_time_out_exception">Time out exception</string>
    <string name="error_socket_exception">Socket exception</string>
    <string name="error_malformed_url_exception">Malformed url exception</string>
    <string name="error_io_exception">I/O exception</string>
    <string name="error_other_exception">General exception</string>
    <string name="get_list_success">Get list of devices</string>
    <string name="get_success">Get device</string>
    <string name="get_time_out">Time out</string>
    <string name="post_submit">Create device</string>
    <string name="delete_erase">Delete device</string>
    <string name="put_update">Update device</string>
    <string name="generic_activity_label">GenericActivity</string>
    <string name="device_id_hint">Id</string>
    <string name="device_name_hint">Name</string>
    <string name="device_resolution_hint">Resolution</string>
    <string name="button_submit">Submit</string>
    <string name="required">Required</string>
    <string name="not_found">Not found</string>
    <string name="get_file">Get file</string>
    <string name="select_devices">Select devices</string>
    <string name="post_file">Upload file</string>
    <string name="button_choose_file">Choose a file to upload</string>
    <string name="file_to_upload_placeholder">File to upload: </string>
</resources>