<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fragment_get_page_list_success"
            style="@style/TextItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_list_success"/>

        <TextView
            android:id="@+id/fragment_get_page_success"
            style="@style/TextItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_success"/>

        <TextView
            android:id="@+id/fragment_get_page_time_out"
            style="@style/TextItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_time_out"/>

        <TextView
            android:id="@+id/fragment_get_page_file"
            style="@style/TextItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_file" />

    </LinearLayout>
</ScrollView>

