<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <TextView
        android:id="@+id/fragment_post_example_file_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:text="@string/file_to_upload_placeholder"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fragment_post_example_file_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_choose_file"/>

        <Button
            android:id="@+id/fragment_post_example_file_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_submit"/>

    </LinearLayout>

    <TextView
        android:id="@+id/fragment_post_example_file_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:freezesText="true"/>
</LinearLayout>